--- a/.classpath
+++ b/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="lib" path="lib/system-rules-1.16.0.jar"/>
+	<classpathentry kind="lib" path="lib/h2-1.4.194.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
