--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
+  
   <groupId>Homy1_SEPT_AppointmentBook</groupId>
   <artifactId>Homy1_SEPT_AppointmentBook</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <packaging>jar</packaging>
+  
   <name>notSEPT_Appointmentbook</name>
   <description>notSEPT_In_Maven</description>
   <properties>
@@ -23,20 +26,23 @@
     </plugins>
     <resources>
     	<resource>
-    	<filtering>false</filtering>
     	<directory>src</directory>
-    	<includes>
-    	<include>*.fxml</include>
-    	</includes>
     	</resource>
     </resources>
   </build>
   <dependencies>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.12</version>
+    </dependency>
+  
   	<dependency>
   		<groupId>com.h2database</groupId>
   		<artifactId>h2</artifactId>
   		<version>1.4.194</version>
   	</dependency>
+  	
   	<dependency>
   		<groupId>com.github.stefanbirkner</groupId>
   		<artifactId>system-rules</artifactId>
